getting up to speed on data writing

--- a/explore-training.ipynb
+++ b/explore-training.ipynb
@@ -10,7 +10,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The history saving thread hit an unexpected error (OperationalError('database or disk is full')).History will not be written to the database.\n",
       "Preparing transaction: ...working... done\n",
       "Verifying transaction: ...working... done\n",
       "Executing transaction: ...working... Enabling notebook extension jupyter-js-widgets/extension...\n",
@@ -18,17 +17,6 @@
       "\n",
       "done\n",
       "Installing pip dependencies: ...working... done\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Error in atexit._run_exitfuncs:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/srv/conda/envs/notebook/lib/python3.8/site-packages/IPython/core/history.py\", line 579, in end_session\n",
-      "    self.db.execute(\"\"\"UPDATE sessions SET end=?, num_cmds=? WHERE\n",
-      "sqlite3.OperationalError: database or disk is full\n"
      ]
     }
    ],
@@ -38,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "3efea8a8-81ad-4717-b8c4-738139cd028e",
    "metadata": {},
    "outputs": [],
@@ -49,11 +37,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "01267452-d5b8-4266-ba0c-543db2601c69",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import seisbench\n",
     "import seisbench.data as sbd\n",
     "import seisbench.generate as sbg\n",
     "import seisbench.models as sbm\n",
@@ -69,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "e589b60f-334a-4f1d-ba5e-bc095ec42c38",
    "metadata": {},
    "outputs": [],
@@ -93,19 +82,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "54b4fce7-092c-4fa9-aa92-9aa210153630",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'seisbench' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [4]\u001b[0m, in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# How to see what's in the cache:\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCache root:\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[43mseisbench\u001b[49m\u001b[38;5;241m.\u001b[39mcache_root)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mContents:\u001b[39m\u001b[38;5;124m\"\u001b[39m, os\u001b[38;5;241m.\u001b[39mlistdir(seisbench\u001b[38;5;241m.\u001b[39mcache_root))\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdatasets:\u001b[39m\u001b[38;5;124m\"\u001b[39m, os\u001b[38;5;241m.\u001b[39mlistdir(seisbench\u001b[38;5;241m.\u001b[39mcache_root \u001b[38;5;241m/\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdatasets\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'seisbench' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cache root: /home/jovyan/.seisbench\n",
+      "Contents: ['datasets', '.seisbench', 'models', 'config.json']\n",
+      "datasets: ['iquique']\n"
      ]
     }
    ],
@@ -119,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "2aaa7402-6980-4e07-ad18-887c6f48c492",
    "metadata": {},
    "outputs": [
@@ -127,7 +114,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-03-07 22:14:49,889 | seisbench | WARNING | Check available storage and memory before downloading and general use of Iquique dataset. Dataset size: waveforms.hdf5 ~5Gb, metadata.csv ~2.6Mb\n"
+      "2022-03-08 20:43:49,575 | seisbench | WARNING | Check available storage and memory before downloading and general use of Iquique dataset. Dataset size: waveforms.hdf5 ~5Gb, metadata.csv ~2.6Mb\n"
      ]
     }
    ],
@@ -137,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "aa5e6884-9c7a-485a-8cb8-035af32e4436",
    "metadata": {},
    "outputs": [],
@@ -740,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "230f347c-502d-427f-af5c-f409906aa53c",
    "metadata": {},
    "outputs": [],
